[package]
name = "fleetlink-transport"
version = "0.1.0"
edition = "2024"

[dependencies]
async-std = { version = "1", features = ["attributes"] }  # for UdpSocket APIs
zerocopy = { version = "0.7", features = ["derive"] }  # zero-copy serialization
futures = "0.3"               # for async utilities in tests
chrono = { version = "0.4", features = ["serde"] }  # for timestamps in examples
criterion = { version = "0.5", features = ["html_reports"] }  # for benchmarking
plotters = "0.3"              # for generating charts
serde = { version = "1.0", features = ["derive"] }  # for data serialization
serde_json = "1.0"            # for JSON output
tokio = { version = "1", features = ["full"] }  # alternative async runtime for comparison

[[bench]]
name = "transport_benchmarks"
harness = false
